--- a/VOD_cohorts.ipynb
+++ b/VOD_cohorts.ipynb
@@ -22,6 +22,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Preprocess the data and split customers into 2 groups"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
@@ -326,7 +333,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Split into 2 groups"
+    "## Prepare cohorts and return rates for both groups"
    ]
   },
   {
