Return prob field to original dataset

--- a/Random Content and Age.ipynb
+++ b/Random Content and Age.ipynb
@@ -2660,9 +2660,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 294,
+   "execution_count": 311,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1181071, 16)\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -2699,6 +2706,7 @@
        "      <th>is_EST_purchaser</th>\n",
        "      <th>pred</th>\n",
        "      <th>probabilities_of_class_1</th>\n",
+       "      <th>cost</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -2719,6 +2727,7 @@
        "      <td>0</td>\n",
        "      <td>1</td>\n",
        "      <td>0.704037</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -2737,6 +2746,7 @@
        "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>0.987274</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -2755,6 +2765,7 @@
        "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>0.750171</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -2773,6 +2784,7 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0.429640</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -2791,6 +2803,7 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0.356574</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -2811,21 +2824,471 @@
        "3          0.0             1.0          1.0           0     2.08    0.000000   \n",
        "4          1.0             0.0          1.0           0     2.91    0.000000   \n",
        "\n",
-       "   recency  tenure  is_EST_purchaser  pred  probabilities_of_class_1  \n",
-       "0    241.0   294.0                 0     1                  0.704037  \n",
-       "1    261.0   478.0                 1     1                  0.987274  \n",
-       "2    799.0   799.0                 1     1                  0.750171  \n",
-       "3   1354.0  1354.0                 0     0                  0.429640  \n",
-       "4    237.0   237.0                 0     0                  0.356574  "
+       "   recency  tenure  is_EST_purchaser  pred  probabilities_of_class_1  cost  \n",
+       "0    241.0   294.0                 0     1                  0.704037     1  \n",
+       "1    261.0   478.0                 1     1                  0.987274     0  \n",
+       "2    799.0   799.0                 1     1                  0.750171     0  \n",
+       "3   1354.0  1354.0                 0     0                  0.429640     0  \n",
+       "4    237.0   237.0                 0     0                  0.356574     0  "
       ]
      },
-     "execution_count": 294,
+     "execution_count": 311,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "print(dataset.shape)\n",
     "dataset.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 312,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1181071, 21)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>encrypted_customer_id</th>\n",
+       "      <th>1_2yr_Catalogue</th>\n",
+       "      <th>2_3yr_Catalogue</th>\n",
+       "      <th>6mo_1yr_Catalogue</th>\n",
+       "      <th>Deep Catalogue</th>\n",
+       "      <th>New Release</th>\n",
+       "      <th>Recent release</th>\n",
+       "      <th>Movie EST</th>\n",
+       "      <th>Movie VOD</th>\n",
+       "      <th>TV Episode</th>\n",
+       "      <th>...</th>\n",
+       "      <th>Unknown</th>\n",
+       "      <th>total_units</th>\n",
+       "      <th>first_date</th>\n",
+       "      <th>last_date</th>\n",
+       "      <th>is_engaged</th>\n",
+       "      <th>revenue</th>\n",
+       "      <th>is_EST_purchaser</th>\n",
+       "      <th>frequency</th>\n",
+       "      <th>recency</th>\n",
+       "      <th>tenure</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>A000067473PGLTJF0EYD</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>2017-07-18</td>\n",
+       "      <td>2017-09-09</td>\n",
+       "      <td>0</td>\n",
+       "      <td>16.62</td>\n",
+       "      <td>0</td>\n",
+       "      <td>7.571429</td>\n",
+       "      <td>241.0</td>\n",
+       "      <td>294.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>A00010742Y4RNZSX0RGCC</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>2017-01-15</td>\n",
+       "      <td>2017-08-20</td>\n",
+       "      <td>0</td>\n",
+       "      <td>23.32</td>\n",
+       "      <td>1</td>\n",
+       "      <td>108.500000</td>\n",
+       "      <td>261.0</td>\n",
+       "      <td>478.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>A00020501K0ZZ493L8PKI</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>2016-02-29</td>\n",
+       "      <td>2016-02-29</td>\n",
+       "      <td>0</td>\n",
+       "      <td>6.66</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>799.0</td>\n",
+       "      <td>799.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>A00036282VGJMPIOTVRQ6</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>2014-08-23</td>\n",
+       "      <td>2014-08-23</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2.08</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>1354.0</td>\n",
+       "      <td>1354.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>A00039261XPOLNK4IAXOW</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>2017-09-13</td>\n",
+       "      <td>2017-09-13</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2.91</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>237.0</td>\n",
+       "      <td>237.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 21 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   encrypted_customer_id  1_2yr_Catalogue  2_3yr_Catalogue  6mo_1yr_Catalogue  \\\n",
+       "0   A000067473PGLTJF0EYD              0.0              2.0                0.0   \n",
+       "1  A00010742Y4RNZSX0RGCC              0.0              0.0                0.0   \n",
+       "2  A00020501K0ZZ493L8PKI              0.0              0.0                1.0   \n",
+       "3  A00036282VGJMPIOTVRQ6              0.0              0.0                0.0   \n",
+       "4  A00039261XPOLNK4IAXOW              0.0              0.0                0.0   \n",
+       "\n",
+       "   Deep Catalogue  New Release  Recent release  Movie EST  Movie VOD  \\\n",
+       "0             2.0          1.0             2.0        0.0        7.0   \n",
+       "1             0.0          0.0             2.0        2.0        0.0   \n",
+       "2             0.0          0.0             0.0        1.0        0.0   \n",
+       "3             0.0          0.0             1.0        0.0        1.0   \n",
+       "4             0.0          1.0             0.0        0.0        1.0   \n",
+       "\n",
+       "   TV Episode   ...    Unknown  total_units  first_date  last_date is_engaged  \\\n",
+       "0         0.0   ...        0.0          7.0  2017-07-18 2017-09-09          0   \n",
+       "1         0.0   ...        0.0          2.0  2017-01-15 2017-08-20          0   \n",
+       "2         0.0   ...        0.0          1.0  2016-02-29 2016-02-29          0   \n",
+       "3         0.0   ...        0.0          1.0  2014-08-23 2014-08-23          0   \n",
+       "4         0.0   ...        0.0          1.0  2017-09-13 2017-09-13          0   \n",
+       "\n",
+       "   revenue  is_EST_purchaser   frequency  recency  tenure  \n",
+       "0    16.62                 0    7.571429    241.0   294.0  \n",
+       "1    23.32                 1  108.500000    261.0   478.0  \n",
+       "2     6.66                 1    0.000000    799.0   799.0  \n",
+       "3     2.08                 0    0.000000   1354.0  1354.0  \n",
+       "4     2.91                 0    0.000000    237.0   237.0  \n",
+       "\n",
+       "[5 rows x 21 columns]"
+      ]
+     },
+     "execution_count": 312,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "print(merged_u.shape)\n",
+    "merged_u.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 313,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rm = pd.merge(left=merged_u,right=dataset[['pred','probabilities_of_class_1','cost']], left_index=True, right_index=True, how=\"left\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 314,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>encrypted_customer_id</th>\n",
+       "      <th>1_2yr_Catalogue</th>\n",
+       "      <th>2_3yr_Catalogue</th>\n",
+       "      <th>6mo_1yr_Catalogue</th>\n",
+       "      <th>Deep Catalogue</th>\n",
+       "      <th>New Release</th>\n",
+       "      <th>Recent release</th>\n",
+       "      <th>Movie EST</th>\n",
+       "      <th>Movie VOD</th>\n",
+       "      <th>TV Episode</th>\n",
+       "      <th>...</th>\n",
+       "      <th>last_date</th>\n",
+       "      <th>is_engaged</th>\n",
+       "      <th>revenue</th>\n",
+       "      <th>is_EST_purchaser</th>\n",
+       "      <th>frequency</th>\n",
+       "      <th>recency</th>\n",
+       "      <th>tenure</th>\n",
+       "      <th>pred</th>\n",
+       "      <th>probabilities_of_class_1</th>\n",
+       "      <th>cost</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>A000067473PGLTJF0EYD</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>2017-09-09</td>\n",
+       "      <td>0</td>\n",
+       "      <td>16.62</td>\n",
+       "      <td>0</td>\n",
+       "      <td>7.571429</td>\n",
+       "      <td>241.0</td>\n",
+       "      <td>294.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.704037</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>A00010742Y4RNZSX0RGCC</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>2017-08-20</td>\n",
+       "      <td>0</td>\n",
+       "      <td>23.32</td>\n",
+       "      <td>1</td>\n",
+       "      <td>108.500000</td>\n",
+       "      <td>261.0</td>\n",
+       "      <td>478.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.987274</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>A00020501K0ZZ493L8PKI</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>2016-02-29</td>\n",
+       "      <td>0</td>\n",
+       "      <td>6.66</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>799.0</td>\n",
+       "      <td>799.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.750171</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>A00036282VGJMPIOTVRQ6</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>2014-08-23</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2.08</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>1354.0</td>\n",
+       "      <td>1354.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.429640</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>A00039261XPOLNK4IAXOW</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>2017-09-13</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2.91</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>237.0</td>\n",
+       "      <td>237.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.356574</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 24 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   encrypted_customer_id  1_2yr_Catalogue  2_3yr_Catalogue  6mo_1yr_Catalogue  \\\n",
+       "0   A000067473PGLTJF0EYD              0.0              2.0                0.0   \n",
+       "1  A00010742Y4RNZSX0RGCC              0.0              0.0                0.0   \n",
+       "2  A00020501K0ZZ493L8PKI              0.0              0.0                1.0   \n",
+       "3  A00036282VGJMPIOTVRQ6              0.0              0.0                0.0   \n",
+       "4  A00039261XPOLNK4IAXOW              0.0              0.0                0.0   \n",
+       "\n",
+       "   Deep Catalogue  New Release  Recent release  Movie EST  Movie VOD  \\\n",
+       "0             2.0          1.0             2.0        0.0        7.0   \n",
+       "1             0.0          0.0             2.0        2.0        0.0   \n",
+       "2             0.0          0.0             0.0        1.0        0.0   \n",
+       "3             0.0          0.0             1.0        0.0        1.0   \n",
+       "4             0.0          1.0             0.0        0.0        1.0   \n",
+       "\n",
+       "   TV Episode  ...   last_date  is_engaged  revenue is_EST_purchaser  \\\n",
+       "0         0.0  ...  2017-09-09           0    16.62                0   \n",
+       "1         0.0  ...  2017-08-20           0    23.32                1   \n",
+       "2         0.0  ...  2016-02-29           0     6.66                1   \n",
+       "3         0.0  ...  2014-08-23           0     2.08                0   \n",
+       "4         0.0  ...  2017-09-13           0     2.91                0   \n",
+       "\n",
+       "    frequency  recency  tenure  pred  probabilities_of_class_1  cost  \n",
+       "0    7.571429    241.0   294.0     1                  0.704037     1  \n",
+       "1  108.500000    261.0   478.0     1                  0.987274     0  \n",
+       "2    0.000000    799.0   799.0     1                  0.750171     0  \n",
+       "3    0.000000   1354.0  1354.0     0                  0.429640     0  \n",
+       "4    0.000000    237.0   237.0     0                  0.356574     0  \n",
+       "\n",
+       "[5 rows x 24 columns]"
+      ]
+     },
+     "execution_count": 314,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rm.head()"
    ]
   },
   {
