Add Log regression

--- a/Random Content and Age.ipynb
+++ b/Random Content and Age.ipynb
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -47,20 +47,20 @@
     "#df = pd.read_csv(\"../EngagementByAgeandType/data/random_age_content.txt\", sep= \"\\t\",\n",
     "#                names = ['transaction_date','customer_id','units','rank','content','age','marketplace','revenue'])\n",
     "\n",
-    "df = pd.read_csv(\"Z://00_ETL/return_rates/return_rates_content_age_3.txt\", sep= \"\\t\", encoding=\"ISO-8859-1\")\n",
+    "df = pd.read_csv(\"Z://00_ETL/return_rates/return_rates_content_age_4.txt\", sep= \"\\t\", encoding=\"ISO-8859-1\")\n",
     "#df['transaction_date'] = pd.to_datetime(df['transaction_date'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(12476844, 9) 1181071\n"
+      "(20339305, 9) 1299974\n"
      ]
     },
     {
@@ -98,63 +98,63 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>2014-02-28</td>\n",
-       "      <td>A05353501CHY3WMQ180G4</td>\n",
+       "      <td>2015-10-31</td>\n",
+       "      <td>A0199987XFI4BF5J7UE2</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>Movie VOD</td>\n",
-       "      <td>New Release</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>Pacific Rim</td>\n",
-       "      <td>2.08</td>\n",
+       "      <td>1_2yr_Catalogue</td>\n",
+       "      <td>4</td>\n",
+       "      <td>House at the End of the Street (Extended Cut)</td>\n",
+       "      <td>1.67</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>2014-03-06</td>\n",
-       "      <td>A05353501CHY3WMQ180G4</td>\n",
+       "      <td>2015-11-08</td>\n",
+       "      <td>A0199987XFI4BF5J7UE2</td>\n",
        "      <td>1</td>\n",
        "      <td>2</td>\n",
        "      <td>Movie VOD</td>\n",
-       "      <td>New Release</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>Elysium</td>\n",
-       "      <td>2.91</td>\n",
+       "      <td>1_2yr_Catalogue</td>\n",
+       "      <td>4</td>\n",
+       "      <td>The Croods</td>\n",
+       "      <td>2.51</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>2014-03-16</td>\n",
-       "      <td>A05353501CHY3WMQ180G4</td>\n",
+       "      <td>2016-02-27</td>\n",
+       "      <td>A0199987XFI4BF5J7UE2</td>\n",
        "      <td>1</td>\n",
        "      <td>3</td>\n",
        "      <td>Movie VOD</td>\n",
        "      <td>New Release</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>Percy Jackson: Sea Of Monsters</td>\n",
-       "      <td>2.91</td>\n",
+       "      <td>4</td>\n",
+       "      <td>Der Marsianer - Rettet Mark Watney [dt./OV]</td>\n",
+       "      <td>4.19</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>2014-03-17</td>\n",
-       "      <td>A05353501CHY3WMQ180G4</td>\n",
+       "      <td>2017-12-26</td>\n",
+       "      <td>A04749392M4HMZ590BP26</td>\n",
        "      <td>1</td>\n",
-       "      <td>4</td>\n",
+       "      <td>1</td>\n",
        "      <td>Movie VOD</td>\n",
-       "      <td>New Release</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>The Hunger Games: Catching Fire</td>\n",
-       "      <td>2.91</td>\n",
+       "      <td>1_2yr_Catalogue</td>\n",
+       "      <td>4</td>\n",
+       "      <td>The Visit [dt./OV]</td>\n",
+       "      <td>3.35</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>2014-03-31</td>\n",
-       "      <td>A05353501CHY3WMQ180G4</td>\n",
+       "      <td>2017-09-03</td>\n",
+       "      <td>A05277183OOY6ZFM0DKRE</td>\n",
        "      <td>1</td>\n",
-       "      <td>5</td>\n",
+       "      <td>1</td>\n",
        "      <td>TV Episode</td>\n",
-       "      <td>New Release</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>Crescent City</td>\n",
-       "      <td>1.58</td>\n",
+       "      <td>2_3yr_Catalogue</td>\n",
+       "      <td>4</td>\n",
+       "      <td>Call the Midwife - Episode 1</td>\n",
+       "      <td>2.51</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -162,28 +162,28 @@
       ],
       "text/plain": [
        "  transaction_date_local  encrypted_customer_id  units  rank  \\\n",
-       "0             2014-02-28  A05353501CHY3WMQ180G4      1     1   \n",
-       "1             2014-03-06  A05353501CHY3WMQ180G4      1     2   \n",
-       "2             2014-03-16  A05353501CHY3WMQ180G4      1     3   \n",
-       "3             2014-03-17  A05353501CHY3WMQ180G4      1     4   \n",
-       "4             2014-03-31  A05353501CHY3WMQ180G4      1     5   \n",
+       "0             2015-10-31   A0199987XFI4BF5J7UE2      1     1   \n",
+       "1             2015-11-08   A0199987XFI4BF5J7UE2      1     2   \n",
+       "2             2016-02-27   A0199987XFI4BF5J7UE2      1     3   \n",
+       "3             2017-12-26  A04749392M4HMZ590BP26      1     1   \n",
+       "4             2017-09-03  A05277183OOY6ZFM0DKRE      1     1   \n",
        "\n",
-       "  content_type_named  content_age  marketplace_id  \\\n",
-       "0          Movie VOD  New Release             3.0   \n",
-       "1          Movie VOD  New Release             3.0   \n",
-       "2          Movie VOD  New Release             3.0   \n",
-       "3          Movie VOD  New Release             3.0   \n",
-       "4         TV Episode  New Release             3.0   \n",
+       "  content_type_named      content_age  marketplace_id  \\\n",
+       "0          Movie VOD  1_2yr_Catalogue               4   \n",
+       "1          Movie VOD  1_2yr_Catalogue               4   \n",
+       "2          Movie VOD      New Release               4   \n",
+       "3          Movie VOD  1_2yr_Catalogue               4   \n",
+       "4         TV Episode  2_3yr_Catalogue               4   \n",
        "\n",
-       "                        title_name  revenue  \n",
-       "0                      Pacific Rim     2.08  \n",
-       "1                          Elysium     2.91  \n",
-       "2   Percy Jackson: Sea Of Monsters     2.91  \n",
-       "3  The Hunger Games: Catching Fire     2.91  \n",
-       "4                    Crescent City     1.58  "
+       "                                      title_name  revenue  \n",
+       "0  House at the End of the Street (Extended Cut)     1.67  \n",
+       "1                                     The Croods     2.51  \n",
+       "2    Der Marsianer - Rettet Mark Watney [dt./OV]     4.19  \n",
+       "3                             The Visit [dt./OV]     3.35  \n",
+       "4                   Call the Midwife - Episode 1     2.51  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2845,7 +2845,9 @@
   {
    "cell_type": "code",
    "execution_count": 313,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "rm = pd.merge(left=merged_u,right=dataset[['pred','probabilities_of_class_1','cost']], left_index=True, right_index=True, how=\"left\")"
@@ -3069,7 +3071,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 349,
+   "execution_count": 352,
    "metadata": {},
    "outputs": [
     {
@@ -3094,6 +3096,7 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>encrypted_customer_id</th>\n",
+       "      <th>first_date</th>\n",
        "      <th>last_date</th>\n",
        "      <th>is_engaged</th>\n",
        "      <th>revenue</th>\n",
@@ -3108,38 +3111,132 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>A000067473PGLTJF0EYD</td>\n",
-       "      <td>2017-09-09</td>\n",
-       "      <td>0</td>\n",
-       "      <td>16.62</td>\n",
-       "      <td>0</td>\n",
-       "      <td>7.571429</td>\n",
-       "      <td>241.0</td>\n",
-       "      <td>294.0</td>\n",
+       "      <th>1181065</th>\n",
+       "      <td>AZZYVJZNW0V28</td>\n",
+       "      <td>2014-08-24</td>\n",
+       "      <td>2018-03-03</td>\n",
        "      <td>1</td>\n",
-       "      <td>0.704037</td>\n",
+       "      <td>277.19</td>\n",
        "      <td>1</td>\n",
+       "      <td>29.250000</td>\n",
+       "      <td>66.0</td>\n",
+       "      <td>1353.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1181066</th>\n",
+       "      <td>AZZYVLJRJ2POM</td>\n",
+       "      <td>2014-08-26</td>\n",
+       "      <td>2014-12-02</td>\n",
+       "      <td>0</td>\n",
+       "      <td>17.87</td>\n",
+       "      <td>0</td>\n",
+       "      <td>10.888889</td>\n",
+       "      <td>1253.0</td>\n",
+       "      <td>1351.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.733480</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1181067</th>\n",
+       "      <td>AZZYW6P89R2S9</td>\n",
+       "      <td>2014-03-29</td>\n",
+       "      <td>2018-02-18</td>\n",
+       "      <td>1</td>\n",
+       "      <td>65.10</td>\n",
+       "      <td>1</td>\n",
+       "      <td>52.666667</td>\n",
+       "      <td>79.0</td>\n",
+       "      <td>1501.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.977480</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1181068</th>\n",
+       "      <td>AZZZ35ZSO462F</td>\n",
+       "      <td>2017-02-26</td>\n",
+       "      <td>2017-07-23</td>\n",
+       "      <td>0</td>\n",
+       "      <td>39.12</td>\n",
+       "      <td>1</td>\n",
+       "      <td>24.500000</td>\n",
+       "      <td>289.0</td>\n",
+       "      <td>436.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.999131</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1181069</th>\n",
+       "      <td>AZZZLMH5RBWY1</td>\n",
+       "      <td>2017-08-05</td>\n",
+       "      <td>2018-04-29</td>\n",
+       "      <td>1</td>\n",
+       "      <td>132.69</td>\n",
+       "      <td>1</td>\n",
+       "      <td>9.888889</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>276.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1181070</th>\n",
+       "      <td>AZZZPTDS3H16</td>\n",
+       "      <td>2018-01-21</td>\n",
+       "      <td>2018-01-21</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2.91</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>107.0</td>\n",
+       "      <td>107.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.431356</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "  encrypted_customer_id  last_date  is_engaged  revenue  is_EST_purchaser  \\\n",
-       "0  A000067473PGLTJF0EYD 2017-09-09           0    16.62                 0   \n",
+       "        encrypted_customer_id first_date  last_date  is_engaged  revenue  \\\n",
+       "1181065         AZZYVJZNW0V28 2014-08-24 2018-03-03           1   277.19   \n",
+       "1181066         AZZYVLJRJ2POM 2014-08-26 2014-12-02           0    17.87   \n",
+       "1181067         AZZYW6P89R2S9 2014-03-29 2018-02-18           1    65.10   \n",
+       "1181068         AZZZ35ZSO462F 2017-02-26 2017-07-23           0    39.12   \n",
+       "1181069         AZZZLMH5RBWY1 2017-08-05 2018-04-29           1   132.69   \n",
+       "1181070          AZZZPTDS3H16 2018-01-21 2018-01-21           0     2.91   \n",
        "\n",
-       "   frequency  recency  tenure  pred  probabilities_of_class_1  cost  \n",
-       "0   7.571429    241.0   294.0     1                  0.704037     1  "
+       "         is_EST_purchaser  frequency  recency  tenure  pred  \\\n",
+       "1181065                 1  29.250000     66.0  1353.0     1   \n",
+       "1181066                 0  10.888889   1253.0  1351.0     1   \n",
+       "1181067                 1  52.666667     79.0  1501.0     1   \n",
+       "1181068                 1  24.500000    289.0   436.0     1   \n",
+       "1181069                 1   9.888889      9.0   276.0     1   \n",
+       "1181070                 0   0.000000    107.0   107.0     0   \n",
+       "\n",
+       "         probabilities_of_class_1  cost  \n",
+       "1181065                  1.000000     0  \n",
+       "1181066                  0.733480     1  \n",
+       "1181067                  0.977480     0  \n",
+       "1181068                  0.999131     0  \n",
+       "1181069                  1.000000     0  \n",
+       "1181070                  0.431356     0  "
       ]
      },
-     "execution_count": 349,
+     "execution_count": 352,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "rm[rm['encrypted_customer_id'] == 'A000067473PGLTJF0EYD'].iloc[:,np.r_[0,14:len(rm.columns)]]"
+    "rm.iloc[-6:,np.r_[0,13:len(rm.columns)]]"
    ]
   },
   {
