--- a/Price Points with Content Lifecycle - in Progress.ipynb
+++ b/Price Points with Content Lifecycle - in Progress.ipynb
@@ -1596,7 +1596,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 235,
+   "execution_count": 342,
    "metadata": {},
    "outputs": [
     {
@@ -1611,7 +1611,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 235,
+     "execution_count": 342,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1622,7 +1622,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 329,
+   "execution_count": 344,
    "metadata": {
     "collapsed": true
    },
@@ -1632,9 +1632,11 @@
     "\n",
     "def get_output_dimension(df,dimension = None):\n",
     "    if dimension is None:\n",
-    "        get = df.groupby(\"is_promo\")['ops','ops_deseas','units','units_deseas','new_customers'].sum().reset_index()\n",
+    "        get = df.groupby([\"is_promo\"])['ops','ops_deseas','units','units_deseas','new_customers'].sum().reset_index()\n",
+    "    \n",
     "    else:\n",
-    "        get = df.groupby(\"is_promo\", dimension)['ops','ops_deseas','units','units_deseas','new_customers'].sum().reset_index()\n",
+    "        get = df.groupby([\"is_promo\", dimension])['ops','ops_deseas','units','units_deseas','new_customers'].sum().reset_index()\n",
+    "    \n",
     "    \n",
     "    get.set_index(\"is_promo\", inplace=True)\n",
     "       \n",
@@ -1647,27 +1649,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 330,
+   "execution_count": 345,
    "metadata": {},
    "outputs": [],
    "source": [
-    "get = get_output_dimension(gluon)"
+    "get = get_output_dimension(gluon, \"in_promo_price\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 331,
+   "execution_count": 346,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Index(['is_promo', 'ops', 'ops_deseas', 'units', 'units_deseas',\n",
-       "       'new_customers'],\n",
+       "Index(['is_promo', 'in_promo_price', 'ops', 'ops_deseas', 'units',\n",
+       "       'units_deseas', 'new_customers'],\n",
        "      dtype='object')"
       ]
      },
-     "execution_count": 331,
+     "execution_count": 346,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1678,7 +1680,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 332,
+   "execution_count": 347,
    "metadata": {},
    "outputs": [
     {
@@ -1703,6 +1705,7 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>is_promo</th>\n",
+       "      <th>in_promo_price</th>\n",
        "      <th>ops</th>\n",
        "      <th>ops_deseas</th>\n",
        "      <th>units</th>\n",
@@ -1714,55 +1717,92 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>non_promo_period</td>\n",
-       "      <td>2.244142e+06</td>\n",
-       "      <td>2.279778e+06</td>\n",
-       "      <td>162081.666667</td>\n",
-       "      <td>164229.831757</td>\n",
-       "      <td>7228.333333</td>\n",
+       "      <td>4.99</td>\n",
+       "      <td>1.179313e+06</td>\n",
+       "      <td>1.199657e+06</td>\n",
+       "      <td>96573.333333</td>\n",
+       "      <td>97993.918163</td>\n",
+       "      <td>3525.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
+       "      <td>non_promo_period</td>\n",
+       "      <td>9.99</td>\n",
+       "      <td>8.218713e+05</td>\n",
+       "      <td>8.340327e+05</td>\n",
+       "      <td>54915.000000</td>\n",
+       "      <td>55569.719492</td>\n",
+       "      <td>3266.666667</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>non_promo_period</td>\n",
+       "      <td>14.99</td>\n",
+       "      <td>2.429580e+05</td>\n",
+       "      <td>2.460890e+05</td>\n",
+       "      <td>10593.333333</td>\n",
+       "      <td>10666.194102</td>\n",
+       "      <td>436.666667</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
        "      <td>promo_period</td>\n",
-       "      <td>2.067645e+06</td>\n",
-       "      <td>2.193277e+06</td>\n",
-       "      <td>354181.000000</td>\n",
-       "      <td>374742.597892</td>\n",
-       "      <td>13524.000000</td>\n",
+       "      <td>4.99</td>\n",
+       "      <td>1.109030e+06</td>\n",
+       "      <td>1.170398e+06</td>\n",
+       "      <td>249815.000000</td>\n",
+       "      <td>263428.452467</td>\n",
+       "      <td>8565.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>promo_period</td>\n",
+       "      <td>9.99</td>\n",
+       "      <td>7.660062e+05</td>\n",
+       "      <td>8.156375e+05</td>\n",
+       "      <td>89045.000000</td>\n",
+       "      <td>94827.021055</td>\n",
+       "      <td>4345.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>promo_period</td>\n",
+       "      <td>14.99</td>\n",
+       "      <td>1.926089e+05</td>\n",
+       "      <td>2.072412e+05</td>\n",
+       "      <td>15321.000000</td>\n",
+       "      <td>16487.124371</td>\n",
+       "      <td>614.000000</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "           is_promo           ops    ops_deseas          units   units_deseas  \\\n",
-       "0  non_promo_period  2.244142e+06  2.279778e+06  162081.666667  164229.831757   \n",
-       "1      promo_period  2.067645e+06  2.193277e+06  354181.000000  374742.597892   \n",
+       "           is_promo  in_promo_price           ops    ops_deseas  \\\n",
+       "0  non_promo_period            4.99  1.179313e+06  1.199657e+06   \n",
+       "1  non_promo_period            9.99  8.218713e+05  8.340327e+05   \n",
+       "2  non_promo_period           14.99  2.429580e+05  2.460890e+05   \n",
+       "3      promo_period            4.99  1.109030e+06  1.170398e+06   \n",
+       "4      promo_period            9.99  7.660062e+05  8.156375e+05   \n",
+       "5      promo_period           14.99  1.926089e+05  2.072412e+05   \n",
        "\n",
-       "   new_customers  \n",
-       "0    7228.333333  \n",
-       "1   13524.000000  "
+       "           units   units_deseas  new_customers  \n",
+       "0   96573.333333   97993.918163    3525.000000  \n",
+       "1   54915.000000   55569.719492    3266.666667  \n",
+       "2   10593.333333   10666.194102     436.666667  \n",
+       "3  249815.000000  263428.452467    8565.000000  \n",
+       "4   89045.000000   94827.021055    4345.000000  \n",
+       "5   15321.000000   16487.124371     614.000000  "
       ]
      },
-     "execution_count": 332,
+     "execution_count": 347,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "get"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "dimension = \"easy_lifecycles\"\n",
-    "metric1 = \"OPS_deseas_per_week\"\n",
-    "metric2 = \"units_deseas_per_week\""
    ]
   },
   {
