create method for non overlapping segments

--- a/Sandbox.ipynb
+++ b/Sandbox.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [
     {
@@ -205,7 +205,7 @@
        "[5 rows x 26 columns]"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 110,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -218,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -265,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -276,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -286,17 +286,132 @@
        " [265, 267, 469, 5],\n",
        " [267, 469, 199, 5],\n",
        " [267, 325, 199, 5],\n",
-       " [267, 325, 469, 5]]"
+       " [267, 325, 469, 5],\n",
+       " [265, 469, 199, 4],\n",
+       " [265, 325, 199, 4],\n",
+       " [265, 325, 469, 4],\n",
+       " [265, 241, 469, 4],\n",
+       " [265, 267, 241, 4]]"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "final[0:5]"
+    "final[0:10]"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Create non overlapping segments and retrieve customers"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "temp = df.values.tolist()\n",
+    "values = [[element for element in row if element != 0] for row in temp]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "#Using dict comphrehension\n",
+    "itemDict = {item[0]: item[1:] for item in values}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "newList = []\n",
+    "\n",
+    "for keys in itemDict:\n",
+    "    newList.append([[element for element in list(set(comb))] for comb in itertools.combinations(itemDict[keys], 3)])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "dictionary = dict(zip(itemDict.keys(), newList))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 225,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# n = 0\n",
+    "# while (n < df.shape[0]):\n",
+    "    \n",
+    "#     for k, v in dictionary.items():\n",
+    "        \n",
+    "#         if final[n][0:-1] in v:\n",
+    "#             print(\"Rank of most common combo: \", n, \"Combo: \", final[n][0:-1], \"CustomerId:\", int(k))\n",
+    "#     n = n + 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 229,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1020000000, 924000000, 77800000, 1120000000, 878000000, 1170000000, 6760000000, 311000000, 689000000]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#While loop covers cumulatively all the customers eligible for combinations mentioned above\n",
+    "n = 0\n",
+    "list_of_keys_so_far = [] #collect old previous keys\n",
+    "\n",
+    "while (n < len(final)):\n",
+    "    \n",
+    "    for k, v in dictionary.items():\n",
+    "    \n",
+    "        if final[n][0:-1] in v:\n",
+    "             list_of_keys_so_far.append(int(k))\n",
+    "    #print(list(set(list_of_keys_so_far)),final[n][0:-1])\n",
+    "    n += 1\n",
+    "print(list(set(list_of_keys_so_far)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
